@@ -1,29 +1,25 @@
 package com.bike.service;
 
-import com.bike.BorrowMyBikeApplication;
 import com.bike.model.Bike;
 import com.bike.model.BikeHire;
-import com.bike.model.MybikeUser;
+import com.bike.model.User;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.dao.EmptyResultDataAccessException;
 
-import jakarta.persistence.EntityNotFoundException;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.UUID;
 
+import static com.bike.util.IntegrationTestUtil.aMybikeUser;
 import static java.time.LocalDate.now;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 
 @Slf4j
-@SpringBootTest(classes = BorrowMyBikeApplication.class)
-public class MybikeUserServiceIntegrationTest extends BasicServiceIntegrationTest {
+public class UserServiceIntegrationTest extends BasicServiceIntegrationTest {
 
     @Autowired
     private UserService userService;
@@ -34,16 +30,16 @@ public class MybikeUserServiceIntegrationTest extends BasicServiceIntegrationTes
     @Autowired
     private BikeHireService bikeHireService;
 
-    private MybikeUser user;
+    private User user;
 
     @BeforeEach
     void setUp() {
-        user = MybikeUser.createWithRequiredFields("Nestor", "Miller", "n.m@mail.com", "SW9 1NR", "password");
+        user = aMybikeUser();
     }
 
     @Test
     void shouldSaveUser() {
-        MybikeUser saved = userService.createUser(user);
+        var saved = userService.createUser(user);
         assertNotNull(saved.getId());
         assertThat(saved)
                 .usingRecursiveComparison()
@@ -53,8 +49,8 @@ public class MybikeUserServiceIntegrationTest extends BasicServiceIntegrationTes
 
     @Test
     void shouldSaveAndLoadUser() {
-        MybikeUser saved = userService.createUser(user);
-        MybikeUser loaded = userService.getById(saved.getId());
+        var saved = userService.createUser(user);
+        var loaded = userService.getById(saved.getId());
         assertNotNull(saved.getId());
         assertThat(loaded)
                 .usingRecursiveComparison()
@@ -72,10 +68,7 @@ public class MybikeUserServiceIntegrationTest extends BasicServiceIntegrationTes
     @Test
     void shouldNotDeleteUserByWrongId() {
         userService.createUser(user);
-        UUID randId = UUID.randomUUID();
-        Throwable exception = assertThrows(EntityNotFoundException.class, () -> userService.deleteUser(randId));
-        assertEquals("Unable to delete user with id " + randId, exception.getMessage());
-        MybikeUser loaded = userService.getById(user.getId());
+        var loaded = userService.getById(user.getId());
         assertNotNull(loaded.getId());
         assertThat(loaded)
                 .usingRecursiveComparison()
@@ -84,9 +77,9 @@ public class MybikeUserServiceIntegrationTest extends BasicServiceIntegrationTes
 
     @Test
     void shouldNotCreateDuplicateUser() {
-        MybikeUser saved = userService.createUser(user);
+        var saved = userService.createUser(user);
         assertNotNull(saved.getId());
-        user = MybikeUser.createWithRequiredFields("Nestor", "Miller", "n.m@mail.com", "SW9 1NR", "password");
+        user = aMybikeUser();
         assertNull(user.getId());
         Throwable exception = assertThrows(IllegalArgumentException.class, () -> userService.createUser(user));
         assertEquals("User with this email already exists: " + saved.getEmail(), exception.getMessage());
@@ -94,14 +87,14 @@ public class MybikeUserServiceIntegrationTest extends BasicServiceIntegrationTes
 
     @Test
     void shouldSaveAndFetchAllUsers() {
-        MybikeUser saved1 = userService.createUser(user);
+        var saved1 = userService.createUser(user);
         assertNotNull(saved1.getId());
-        user = MybikeUser.createWithRequiredFields("Nick", "Mills", "n.n@mail.com", "SW9 1NR", "password");
+        user = aMybikeUser("Nick", "Mills", "n.n@mail.com", "SW9 1NR", "password");
         user.setEmail("m.n@mail.com");
         assertNull(user.getId());
-        MybikeUser saved2 = userService.createUser(user);
+        User saved2 = userService.createUser(user);
         assertNotNull(saved2.getId());
-        List<MybikeUser> allUsers = userService.getAll();
+        List<User> allUsers = userService.getAll();
         assertEquals(2, allUsers.size());
         assertThat(allUsers.get(0))
                 .usingRecursiveComparison()
@@ -113,9 +106,9 @@ public class MybikeUserServiceIntegrationTest extends BasicServiceIntegrationTes
 
     @Test
     void shouldReturnAllBikesOwnerByUser() {
-        MybikeUser saved = userService.createUser(user);
-        Bike bike1 = new Bike("Raleigh", "Pioneer", BigDecimal.valueOf(80.00), user);
-        Bike bike2 = new Bike("Dawes", "Galaxy", BigDecimal.valueOf(120.00), user);
+        User saved = userService.createUser(user);
+        var bike1 = new Bike("Raleigh", "Pioneer", BigDecimal.valueOf(80.00), user);
+        var bike2 = new Bike("Dawes", "Galaxy", BigDecimal.valueOf(120.00), user);
         bikeService.addNewBike(bike1);
         bikeService.addNewBike(bike2);
         List<Bike> userBikes = userService.getUserBikes(saved);
@@ -131,11 +124,11 @@ public class MybikeUserServiceIntegrationTest extends BasicServiceIntegrationTes
     @Test
     void shouldReturnAllHiresForUser(){
         LocalDate now = now();
-        MybikeUser owner = MybikeUser.createWithRequiredFields("Nestor", "Miller", "n.m@mail.com", "SW9 1NR", "password");
+        var owner = aMybikeUser();
         userService.createUser(owner);
-        MybikeUser borrower = MybikeUser.createWithRequiredFields("Paul", "Smith", "p.s@mail.com", "SW8 1NR", "password");
+        var borrower = aMybikeUser("Paul", "Smith", "p.s@mail.com", "SW8 1NR", "password");
         userService.createUser(borrower);
-        Bike bike = new Bike("Raleigh", "Pioneer", BigDecimal.valueOf(80.00), owner);
+        var bike = new Bike("Raleigh", "Pioneer", BigDecimal.valueOf(80.00), owner);
         bikeService.addNewBike(bike);
         BikeHire hire = BikeHire.builder()
                 .bike(bike)
@@ -148,7 +141,7 @@ public class MybikeUserServiceIntegrationTest extends BasicServiceIntegrationTes
         bikeHireService.saveHire(hire);
         List<BikeHire> userHires = userService.getUserHires(borrower);
         assertEquals(1, userHires.size());
-        assertThat(userHires.get(0))
+        assertThat(userHires.getFirst())
                 .usingRecursiveComparison()
                 .isEqualTo(hire);
     }
