@@ -1,7 +1,7 @@
 package com.bike.service;
 
 import com.bike.model.Bike;
-import com.bike.model.MybikeUser;
+import com.bike.model.User;
 import com.bike.repository.BikeRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
@@ -18,6 +18,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.BDDMockito.given;
 
@@ -33,12 +34,12 @@ class BikeServiceTest {
 
     private List<Bike> bikes;
 
-    private MybikeUser user;
+    private User user;
 
     @BeforeEach
-    private void setUpRepository() {
+    public void setUpRepository() {
         bikes = new ArrayList<>();
-        user = new MybikeUser();
+        user = new User();
         Bike bike1 = new Bike(UUID.randomUUID(), "Raleigh", "Pioneer", BigDecimal.valueOf(80.00), user);
         Bike bike2 = new Bike(UUID.randomUUID(), "Dawes", "Galaxy", BigDecimal.valueOf(100.00), user);
         bikes.add(bike1);
@@ -64,8 +65,8 @@ class BikeServiceTest {
     @Test
     void shouldGetBikeById() {
         // given
-        UUID bikeId = bikes.get(0).getId();
-        given(bikeRepository.findById(bikeId)).willReturn(Optional.of(bikes.get(0)));
+        UUID bikeId = bikes.getFirst().getId();
+        given(bikeRepository.findById(bikeId)).willReturn(Optional.of(bikes.getFirst()));
 
         // when
         Bike bike = service.getById(bikeId);
@@ -88,12 +89,11 @@ class BikeServiceTest {
         });
 
         // when
-        Bike bike = service.addNewBike(bike3);
+        assertDoesNotThrow(()->service.addNewBike(bike3));
 
         //then
         assertEquals(3, bikes.size());
         assertBikesTheSame(bike3, bikes.get(2));
-        assertBikesTheSame(bike, bikes.get(2));
     }
 
     private void assertBikesTheSame(Bike bike1, Bike bike2) {
